--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pISSStream-framesv2",
+  "name": "framesv2-remix-cf-starter",
   "private": true,
   "version": "0.0.1",
   "sideEffects": false,
@@ -36,8 +36,6 @@
     "kysely-neon": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "remix-auth": "^4.1.0",
-    "remix-auth-github": "^3.0.1",
     "remix-themes": "^1.5.1",
     "remix-utils": "^8.0.0",
     "remix-vite": "^0.3.1",
