--- a/package.json
+++ b/package.json
@@ -54,15 +54,15 @@
     "@hono/vite-dev-server": "^0.11.1",
     "@remix-run/dev": "^2.15.3",
     "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.0.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/ws": "^8.5.14",
     "arctic": "^3.2.1",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
     "postcss": "^8.5.1",
     "remix-hono": "^0.0.16",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vite": "^5.4.14",
