--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
-    "@remix-run/cloudflare": "^2.15.3",
-    "@remix-run/react": "^2.15.3",
+    "@remix-run/cloudflare": "^2.16.4",
+    "@remix-run/dev": "^2.16.4",
+    "@remix-run/react": "^2.16.4",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.66.0",
     "@upstash/redis": "^1.34.3",
@@ -52,7 +53,8 @@
     "@hono/node-server": "^1.13.8",
     "@hono/vite-cloudflare-pages": "^0.4.2",
     "@hono/vite-dev-server": "^0.11.1",
-    "@remix-run/dev": "^2.15.3",
+    "@remix-run/fs-routes": "^2.16.4",
+    "@remix-run/route-config": "^2.16.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.4",
     "@types/react": "^18.3.18",
